gccida/g1/rtx_equal_for_cselib_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rtx_equal_for_cselib_p/src/cselib.c:889:27: error: use of undeclared identifier 'machine_mode'
v11 = cselib_lookup( x, ( machine_mode)*( ( unsigned __int8 *)x + 2), 0); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rtx_equal_for_cselib_p/src/cselib.c:895:27: error: use of undeclared identifier 'machine_mode'
v12 = cselib_lookup( y, ( machine_mode)*( ( unsigned __int8 *)y + 2), 0); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rtx_equal_for_cselib_p/src/cselib.c:990:30: error: use of undeclared identifier 'insn'
fancy_abort( ( const char *)&insn, 530, "rtx_equal_for_cselib_p"); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rtx_equal_for_cselib_p/src/obj/cselib.o] Error 1
